added an updater and more stopwords lists for some languages

--- a/TODO
+++ b/TODO
@@ -21,7 +21,7 @@ Stuff todo for first beta release 0.0.1
 # Add logger to critical functions, or do it periodicly. 
 ^ Create installer(i dont know about this)
 - site Design for mobile.
-- Have a updater.
+# Have a updater.
 + IF a functions looks to big, dont worry it will be broken up when things get shared
 # tooltip for most things.
 # For single words find dictionary sites and other site to populate UMB, hit 3 birds with on stone.
